Added github workflow and test controller

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -9,6 +9,9 @@
     }
   },
   "profiles": {
+    "Api": {
+      "applicationUrl": "http://localhost:5000"
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
