--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build and push Docker Image to GHCR
+name: Build and Push Docker Image to GHCR
 
 on:
   push:
@@ -10,20 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Checkout the repository
+    # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-    # Log in to ghcr
-      - name: Log in to ghcr
+    # Step 2: Log in to GHCR
+      - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ secrets.GITHUB_ACTOR }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+    # Step 3: Build the Docker image
       - name: Build Docker image
-        run: docker build -f Dockerfile.production -t ghcr.io/MathAppPW/Api:latest .
+        run: docker build -f Dockerfile.production -t ghcr.io/<your-org-or-user>/Api:latest .
 
+    # Step 4: Push the Docker image
       - name: Push Docker image
-        run: docker push ghcr.io/MathAppPW/Api:latest
+        run: docker push ghcr.io/<your-org-or-user>/Api:latest
+
