--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,12 +16,8 @@ jobs:
 
     # Step 2: Log in to GHCR
       - name: Log in to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GITHUB_ACTOR }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        
     # Step 3: Build the Docker image
       - name: Build Docker image
         run: docker build -f Dockerfile.production -t ghcr.io/<your-org-or-user>/Api:latest .
