--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,7 +16,11 @@ jobs:
 
     # Step 2: Log in to GHCR
       - name: Log in to GHCR
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login docker.pkg.github.com -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrests.GITHUB_TOKEN }}
         
     # Step 3: Build the Docker image
       - name: Build Docker image
