--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrests.GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
         
     # Step 3: Build the Docker image
       - name: Build Docker image
