--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,9 +24,9 @@ jobs:
         
     # Step 3: Build the Docker image
       - name: Build Docker image
-        run: docker build -f Dockerfile.production -t ghcr.io/<your-org-or-user>/Api:latest .
+        run: docker build -f Dockerfile.production -t ghcr.io/MathAppPW/Api:latest .
 
     # Step 4: Push the Docker image
       - name: Push Docker image
-        run: docker push ghcr.io/<your-org-or-user>/Api:latest
+        run: docker push ghcr.io/MathAppPW/Api:latest
         #comment to trigger push
